tests/valid/noAnyType.ts
// @ts-nocheck
const value: unknown = 5;
