tests/invalid/noAnyType.ts
// @ts-nocheck
const value: any = 5;
